--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@ img {
 
 main {
   min-height: 100svh;
-  background: url(/images/bg-mobile.png) no-repeat center / cover;
+  background: url("../images/bg-mobile.png") no-repeat center / cover;
   display: flex;
   flex-direction: column;
   align-items: center;
