--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,13 +56,22 @@ main {
   position: relative;
 }
 
+.page-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: filter 0.3s ease;
+}
+
+.page-wrapper.blur {
+  filter: blur(6px);
+  opacity: 0.7;
+}
+
 .cards-holder {
   width: 100%;
-  display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items: center;
-  justify-content: center;
 }
 
 /* logo-card */
@@ -87,9 +96,6 @@ main {
 }
 
 .icons-container div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: var(--blue950);
   padding: 10px;
   border-radius: 10px;
@@ -189,9 +195,6 @@ main {
   border-radius: 10px;
   background-color: #ffffff;
   color: #000000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .storage-left {
@@ -234,7 +237,83 @@ main {
   color: #000000;
 } */
 
+.label-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  bottom: 115%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: var(--blue850);
+  color: white;
+  padding: 6px 10px;
+  font-size: 12px;
+  border-radius: 4px;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  font-family: inherit;
+  font-weight: normal;
+  opacity: 0;
+}
+
+.tooltip.active {
+  opacity: 0.8;
+  pointer-events: auto;
+}
+
 /* pop-up */
+
+.pop-up-tip {
+  width: 95%;
+  max-width: 350px;
+  height: 200px;
+  background-color: var(--blue950);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+  border: 2px solid var(--blue200);
+   opacity: 0;
+  pointer-events: none;
+  transition: 0.3s ease;
+}
+
+.pop-up-tip.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.pop-up-tip p, .pop-up-tip button {
+    font-family: inherit;
+    font-weight: 500;
+}
+
+.pop-up-tip button {
+  padding: 10px 25px;
+  font-size: 1.2rem;
+  background-color: var(--blue950);
+  border: 2px solid var(--blue850);
+  color: #ffffff;
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+.pop-up-tip button:hover {
+  opacity: 1;
+}
 
 .pop-up-card {
   width: 90%;
@@ -243,10 +322,7 @@ main {
   border-radius: 10px;
   backdrop-filter: blur(10px);
   border: 2px solid var(--blue200);
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 20px;
   opacity: 0;
   transform: translateY(20px) scale(0.95);
@@ -369,6 +445,10 @@ body.popup-open {
 
 @media (min-width: 1024px) {
 
+  .pop-up-tip {
+    display: none;
+  }
+
   .pop-up-card {
     display: none;
   }
@@ -378,9 +458,12 @@ body.popup-open {
     pointer-events: none;
   }
 
+  .tooltip {
+    display: inline-block;
+  }
+
   main {
     background: url("../images/bg-desktop.png") no-repeat bottom center / contain;
-    flex-flow: row wrap;
     gap: 3rem;
   }
 
@@ -443,6 +526,15 @@ body.popup-open {
     border-top: 30px solid #ffffff;
     border-left: 30px solid transparent;
   }
+
+  .tooltip::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -17px;
+  border-top: 20px solid var(--blue850);
+  border-left: 20px solid transparent;
+}
 
   .storage-left {
     margin: 0;
